frontend map is conteoler by backend application.properties file
